--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-answerDetailSub.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-answerDetailSub.html
@@ -35,7 +35,7 @@
 				</div>
 				<div class="questionContent-container">
 					<div id="question-content"></div>
-					<div id="img-container"></div>
+					<div id="answer-imgs" class="answer-imgs"></div>
 					<div class="">
 						<p id="answer-time" class="display-inlineBlock answer-time">5小时前</p>
 						<p class="display-inlineBlock mui-pull-right"><span id="answer-zan" class="mui-icon iconfont icon-zanzan1"></span> </p>
