--- a/JiaoBaoYun-hb/html/quan/class-group.html
+++ b/JiaoBaoYun-hb/html/quan/class-group.html
@@ -21,9 +21,9 @@
 		<div class="mui-content mui-scroll-wrapper">
 			<div class="mui-scroll">
 				<ul id="gride" class="mui-table-view mui-grid-view mui-grid-9">
-				
-				   </ul>
-				
+
+				</ul>
+				<button id="quit-group" type="button" class="mui-btn mui-btn-danger group-button display-none">退出</button>
 				<!--<div style="">
 					<div id="segmentedControl" class="mui-segmented-control mui-segmented-control-primary">
 
@@ -41,26 +41,27 @@
 				</div>
 				<div id="item1" class="mui-control-content mui-active">
 					<!--学生群组内容-->
-					<!--<ul id="gride1" class="mui-table-view mui-grid-view mui-grid-9"></ul>
+				<!--<ul id="gride1" class="mui-table-view mui-grid-view mui-grid-9"></ul>
 					<!--退群按钮-->
-					<!--<button id="quit-group1" type="button" class="mui-btn mui-btn-danger group-button display-none">退出</button>-->
+				<!--<button id="quit-group1" type="button" class="mui-btn mui-btn-danger group-button display-none">退出</button>-->
 
 				<!--</div>-->
 				<!--<div id="item2" class="mui-control-content">-->
-					<!--老师群组内容-->
-					<!--<ul id="gride2" class="mui-table-view mui-grid-view mui-grid-9"></ul>-->
-					<!--退群按钮-->
-					<!--<button id="quit-group2" type="button" class="mui-btn mui-btn-danger group-button display-none">退出</button>-->
+				<!--老师群组内容-->
+				<!--<ul id="gride2" class="mui-table-view mui-grid-view mui-grid-9"></ul>-->
+				<!--退群按钮-->
+				<!--<button id="quit-group2" type="button" class="mui-btn mui-btn-danger group-button display-none">退出</button>-->
 
 				<!--</div>-->
 				<!--<div id="item3" class="mui-control-content">-->
-					<!--家长群组内容-->
-					<!--<ul id="gride3" class="mui-table-view mui-grid-view mui-grid-9"></ul>-->
-					<!--退群按钮-->
-					<!--<button id="quit-group3" type="button" class="mui-btn mui-btn-danger group-button display-none">退出</button>-->
+				<!--家长群组内容-->
+				<!--<ul id="gride3" class="mui-table-view mui-grid-view mui-grid-9"></ul>-->
+				<!--退群按钮-->
+				<!--<button id="quit-group3" type="button" class="mui-btn mui-btn-danger group-button display-none">退出</button>-->
 				<!--</div>-->
 			</div>
 		</div>
+
 	</body>
 	<script src="../../js/mui.min.js"></script>
 	<script src="../../js/publicProtocol.js"></script>
