--- a/JiaoBaoYun-hb/html/homework/workdetail-stu.html
+++ b/JiaoBaoYun-hb/html/homework/workdetail-stu.html
@@ -8,6 +8,7 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../css/utils/common.css" rel="stylesheet" />
+		<link href="../../css/utils/preview.css" rel="stylesheet" />
 		<link href="../../css/iconfont/iconfont.css" rel="stylesheet" />
 		<link href="../../css/homework/subjects-icon.css" rel="stylesheet" />
 		<link href="../../css/homework/workdetail-stu.css" rel="stylesheet"/>
@@ -34,6 +35,7 @@
 		    </div>
 		    <div class="homework-detail">
 		    	<p class="brief-content"></p>
+		    	<div id="brief-imgs" class="brief-imgs"></div>
 		    </div>
 		    <div class="startWork-container">
 		    	<p class='startWork-hint'>作业需要在线提交，点击完成</p>
@@ -42,6 +44,8 @@
 		    
 		</div>
 		<script src="../../js/mui.min.js"></script>
+		<script src="../../js/mui.zoom.js "></script>
+		<script src="../../js/mui.previewimage.js "></script>
 		<script src="../../js/storageKeyName.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../../js/publicHomeworkProtocol.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../../js/publicProtocol.js" type="text/javascript" charset="utf-8"></script>
