--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-questionSearch.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-questionSearch.html
@@ -31,6 +31,25 @@
 							<input id="search-btn" type="submit" class="search-btn" value="搜索"></input>
 						</div>
 					</div>
+
+					<ul class="mui-table-view history_container">
+						<li class="mui-table-view-cell">
+							<a class="mui-navigate-right">
+								<span class="mui-icon mui-icon-search"></span> <span> Item 1</span>
+							</a>
+						</li>
+						<li class="mui-table-view-cell">
+							<a class="mui-navigate-right">
+								<span class="mui-icon mui-icon-search"></span> <span> Item 1</span>
+							</a>
+						</li>
+						<li class="mui-table-view-cell">
+							<a class="mui-navigate-right">
+								<span class="mui-icon mui-icon-search"></span> <span> Item 1</span>
+							</a>
+						</li>
+					</ul>
+
 					<ul id="list-container" class="mui-table-view">
 						<!--<li class="mui-table-view-cell">
 							<p>现在能为父母的健康做点什么？</p>
@@ -72,8 +91,16 @@
 				//点击 将文本框内容存于变量 并执行下拉刷新所需逻辑
 				document.getElementById('search-btn').addEventListener('tap', searchQuestion);
 				var search_keyWord = document.getElementById('search-keyWord');
-				search_keyWord.addEventListener('search',searchQuestion);
-				
+				search_keyWord.addEventListener("focus", function() {
+					mui(".history_container")[0].classList.remove("mui-hidden");
+					mui("#list-container")[0].classList.add("mui-hidden");
+				});
+				search_keyWord.addEventListener("blur", function() {
+					mui(".history_container")[0].classList.add("mui-hidden");
+					mui("#list-container")[0].classList.remove("mui-hidden");
+				});
+				search_keyWord.addEventListener('search', searchQuestion);
+
 				mui('.mui-table-view').on('tap', '.mui-table-view-cell', function() {
 					var index = this.id.replace('li', '');
 					events.fireToPageNone('qiuzhi-question.html', 'askId', answerArray[index].TabId);
@@ -115,15 +142,15 @@
 			});
 
 			function searchQuestion() {
-			 
-					keyWord = mui("#search-keyWord")[0].value;
-					console.log(keyWord)
-					document.getElementById('list-container').innerHTML = "";
-					console.log("搜索");
-					pageIndex = 1;
-					flagRef = 0;
-					//4.获取所有符合条件问题
-					getAsksByCondition(keyWord);
+
+				keyWord = mui("#search-keyWord")[0].value;
+				console.log(keyWord)
+				document.getElementById('list-container').innerHTML = "";
+				console.log("搜索");
+				pageIndex = 1;
+				flagRef = 0;
+				//4.获取所有符合条件问题
+				getAsksByCondition(keyWord);
 			}
 			//4.获取所有符合条件问题
 			function getAsksByCondition(askTitle) {
@@ -164,7 +191,7 @@
 			var setQuestionRecord = function(list) {
 				var listContainer = document.getElementById('list-container');
 				for(var i in list) {
-					createList(listContainer, list[i],i);
+					createList(listContainer, list[i], i);
 				}
 			}
 			/**
