关闭侧滑功能

--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-answerDetailSub.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-answerDetailSub.html
@@ -28,8 +28,8 @@
 				<div id="anthor-container" class="anthor-container">
 					<img id="anthor-portrait" class="img-portrait display-inlineBlock" />
 					<div class="export-info display-inlineBlock">
-						<h5 id="anthor-name"></h5>
-						<p id="anthor-info"></p>
+						<h5 id="anthor-name" class="single-line"></h5>
+						<p id="anthor-info" class="single-line"></p>
 					</div>
 					<button id="btn-focus" type="button" class="mui-btn mui-pull-right btn-attention">关注</button>
 				</div>
