--- a/JiaoBaoYun-hb/html/index/index.html
+++ b/JiaoBaoYun-hb/html/index/index.html
@@ -58,7 +58,7 @@
 				<span class="mui-icon iconfont icon-jiaoyu"></span>
 				<span class="mui-tab-label">科教</span>
 			</a>
-			<a id="bottom-show" class="mui-tab-item" href="../show/show_home.html">
+			<a id="bottom-show" class="mui-tab-item" href="../show/show_home_1.html">
 				<span class="mui-icon iconfont icon-dongtai1"></span>
 				<span class="mui-tab-label">展现</span>
 			</a>
