调整index顶部导航

--- a/JiaoBaoYun-hb/html/sciedu/sciedu_home.html
+++ b/JiaoBaoYun-hb/html/sciedu/sciedu_home.html
@@ -71,7 +71,7 @@
 			var sliderId = ''; //记录显示的城市
 			var index; //获取index的webview
 			mui.plusReady(function() {
-				events.closeWaiting();
+				//events.closeWaiting();
 				var main = plus.webview.currentWebview(); //获取当前窗体对象
 				index = plus.webview.getWebviewById('index.html'); //
 
