--- a/JiaoBaoYun-hb/html/show/show_home_1.html
+++ b/JiaoBaoYun-hb/html/show/show_home_1.html
@@ -79,14 +79,14 @@
 					console.log("show " + main.id + '|' + index.id + "|" + sliderId + '|' + cities.length);
 					initBody();
 					//改变顶部的城市
-					changeIndexHeader();
+//					changeIndexHeader();
 				});
 
 				//Webview窗口隐藏事件
 				main.addEventListener("hide", function(e) {
 					console.log("hide " + main.id);
-					var evalJS = "document.getElementById('title').innerText = '';var sciEduSlider=document.getElementById('sciEduSlider');if(sciEduSlider){sciEduSlider.parentNode.removeChild(sciEduSlider);}";
-					index.evalJS(evalJS);
+//					var evalJS = "document.getElementById('title').innerText = '';var sciEduSlider=document.getElementById('sciEduSlider');if(sciEduSlider){sciEduSlider.parentNode.removeChild(sciEduSlider);}";
+//					index.evalJS(evalJS);
 				});
 
 				//---订制城市---start---
@@ -118,8 +118,8 @@
 					pullToRefresh = [] //存储下拉上拉的控件
 					sliderId = ''; //记录显示的城市
 					document.getElementById("content").innerHTML = '';//清理界面
-					var evalJS = "document.getElementById('title').innerText = '';var sciEduSlider=document.getElementById('sciEduSlider');if(sciEduSlider){sciEduSlider.parentNode.removeChild(sciEduSlider);}";
-					index.evalJS(evalJS);
+//					var evalJS = "document.getElementById('title').innerText = '';var sciEduSlider=document.getElementById('sciEduSlider');if(sciEduSlider){sciEduSlider.parentNode.removeChild(sciEduSlider);}";
+//					index.evalJS(evalJS);
 				});
 			});
 
@@ -151,7 +151,7 @@
 							}
 						});
 						//改变顶部的城市
-						changeIndexHeader();
+//						changeIndexHeader();
 						var id = 'bot_' + sliderId.replace('top_', '');
 						var element = document.getElementById(id);
 						var info = JSON.parse(element.getAttribute('data-info'));
@@ -179,7 +179,7 @@
 						//生成滑动框架
 						addCitiesSilders(data, function() {
 							//改变顶部的城市
-							changeIndexHeader();
+							//changeIndexHeader();
 							//初始化滑动控件
 							mui('#slider').slider();
 							//循环初始化所有下拉刷新，上拉加载。
@@ -327,9 +327,9 @@
 						dataStr = date;
 					}
 					data[i].tips = from + ' | ' + dataStr;
-					SciEduHomeItem.addItem(document.getElementById("bot_ul_" + cityCode), data[i], function() {
-						lazyLoad.refresh(true);
-					});
+//					SciEduHomeItem.addItem(document.getElementById("bot_ul_" + cityCode), data[i], function() {
+//						lazyLoad.refresh(true);
+//					});
 				}
 			}
 
