--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-questionSub.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-questionSub.html
@@ -1,200 +1,221 @@
-<!doctype html>
+﻿<!doctype html>
 <html>
+<head>
+    <meta charset="UTF-8">
+    <title></title>
+    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
+    <link href="../../css/mui.min.css" rel="stylesheet" />
+    <link href="../../css/utils/common.css" rel="stylesheet" />
+    <link href="../../css/iconfont/iconfont.css" rel="stylesheet" />
+    <link href="../../css/qiuzhi/qiuzhi-questionSub.css" rel="stylesheet" />
+    <style>
+        /*body,
+            .mui-content {
+                background: white;
+            }*/
 
-	<head>
-		<meta charset="UTF-8">
-		<title></title>
-		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-		<link href="../../css/mui.min.css" rel="stylesheet" />
-		<link href="../../css/utils/common.css" rel="stylesheet" />
-		<link href="../../css/iconfont/iconfont.css" rel="stylesheet" />
-		<link href="../../css/qiuzhi/qiuzhi-questionSub.css" rel="stylesheet" />
-		<style>
-			/*body,
-			.mui-content {
-				background: white;
-			}*/
+        .mui-table-view {
+            margin-top: 0px;
+            word-break: break-all;
+        }
 
-			.mui-table-view {
-				margin-top: 0px;
-				word-break: break-all;
-			}
+        .mui-table-view-cell {
+            background: white;
+        }
 
-			.mui-table-view-cell {
-				background: white;
-			}
+            .mui-table-view:before,
+            .mui-table-view:after,
+            .mui-table-view-cell:after {
+                height: 0px;
+            }
 
-			.mui-table-view:before,
-			.mui-table-view:after,
-			.mui-table-view-cell:after {
-				height: 0px;
-			}
+        .mui-col-xs-4 {
+            padding: 2px;
+            background: red;
+            height: 100px;
+        }
 
-			.mui-col-xs-4 {
-				padding: 2px;
-				background: red;
-				height: 100px;
-			}
+        #question .mui-table-view-cell.mui-active {
+            /*点击问题区域的效果*/
+            background: white;
+        }
 
-			#question .mui-table-view-cell.mui-active {
-				/*点击问题区域的效果*/
-				background: white;
-			}
+        #question {
+            /*问题区域*/
+            text-align: justify;
+            border-bottom: 1px solid #EEEEEE;
+            box-shadow: 0px 0px 5px #E3E3E3;
+        }
 
-			#question {
-				/*问题区域*/
-				text-align: justify;
-				border-bottom: 1px solid #EEEEEE;
-				box-shadow: 0px 0px 5px #E3E3E3;
-			}
+        #question_title {
+            color: #222222;
+            font-weight: bold;
+        }
 
-			#question_images {
-				/*问题区域的图片*/
-				margin-top: 5px;
-				margin-bottom: 5px;
-				background: burlywood;
-			}
+        #question_content {
+            color: #323232;
+        }
 
-			#guanzhu {
-				/*关注按钮*/
-				background: #1DB8F1;
-				border: 1px solid #1DB8F1;
-				height: 28px;
-				padding-top: 5px;
-			}
+        #question_images {
+            /*问题区域的图片*/
+            margin-top: 5px;
+            margin-bottom: 5px;
+            background: burlywood;
+        }
 
-			#liulanshu,
-			#guanzhushu {
-				/*浏览数和关注数*/
-				line-height: 30px;
-				color: darkgray;
-			}
+        #guanzhu {
+            /*关注按钮*/
+            background: #1DB8F1;
+            border: 1px solid #1DB8F1;
+            height: 28px;
+            padding-top: 5px;
+        }
 
-			#guanzhushu {
-				/*关注数*/
-				margin-left: 10px;
-			}
+        #liulanshu,
+        #guanzhushu {
+            /*浏览数和关注数*/
+            line-height: 30px;
+            color: #b7b7b7;
+        }
 
-			.mui-backdrop {
-				/*选择排序的遮罩*/
-				position: fixed;
-				top: 0;
-				right: 0;
-				bottom: 0;
-				left: 0;
-				z-index: 0;
-				background-color: rgba(0,0,0,.3);
-				height: 0px;
-				width: 0px;
-			}
+        #guanzhushu {
+            /*关注数*/
+            margin-left: 10px;
+        }
 
-			.mui-popover .mui-popover-arrow:after {
-				/*popover的三角形箭头*/
-				background-color: white;
-				box-shadow: 0 0 5px rgba(0, 0, 0, .1);
-			}
+        .mui-backdrop {
+            /*选择排序的遮罩*/
+            position: fixed;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            z-index: 0;
+            background-color: rgba(0,0,0,.3);
+            height: 0px;
+            width: 0px;
+        }
 
-			#answer_bottom .mui-table-view-cell:first-child {
-				/*回答列表第一项*/
-				margin-top: 0px;
-			}
+        .mui-popover .mui-popover-arrow:after {
+            /*popover的三角形箭头*/
+            background-color: white;
+            box-shadow: 0 0 5px rgba(0, 0, 0, .1);
+        }
 
-			#answer_bottom .mui-table-view-cell {
-				/*每一项回答列表*/
-				margin-top: 10px;
-			}
+        #answer_top {
+            background-color: #f2f2f2;
+        }
 
-			#answer_bottom .mui-table-view-cell img {
-				/*回答者的头像*/
-				height: 42px;
-				width: 42px;
-				border-radius: 50%;
-			}
+        #answershu {
+            color: #323232;
+        }
 
-			#answer_bottom .mui-table-view-cell .mui-ellipsis {
-				/*回答者姓名*/
-				line-height: 42px;
-				font-size: 16px;
-				font-weight: bold;
-				color: gray;
-			}
+        #answer_bottom .mui-table-view-cell:first-child {
+            /*回答列表第一项*/
+            margin-top: 0px;
+        }
 
-			#answer_bottom .mui-table-view-cell .answer-info {
-				/*回答的赞，评论数，时间信息*/
-				margin-top: 5px;
-				color: darkgray;
-			}
+        #answer_bottom .mui-table-view-cell {
+            /*每一项回答列表*/
+            margin-top: 10px;
+        }
 
-			.ellipsis-3 {
-				/*回答内容*/
-				display: -webkit-box;
-				overflow: hidden;
-				white-space: normal!important;
-				text-overflow: ellipsis;
-				word-wrap: break-word;
-				-webkit-line-clamp: 3;
-				-webkit-box-orient: vertical;
-				margin-top: 10px;
-			}
-		</style>
-	</head>
+            #answer_bottom .mui-table-view-cell img {
+                /*回答者的头像*/
+                height: 42px;
+                width: 42px;
+                border-radius: 50%;
+            }
 
-	<body>
-		<nav class="mui-bar mui-bar-tab" style="background: white;box-shadow: none;padding-top: 6px;">
-			<span class="mui-icon iconfont icon-xie mui-pull-left" style="color: gray;line-height: 34px;padding: 0px;margin-left: 10px;margin-right: 10px;"></span>
-			<div id="tab_div" style="line-height: 34px;border: 1px solid #D9D9D9;margin-left: 50px;margin-right: 10px;padding-left: 25px;color: gray;border-radius: 3px;">
-				<font id="tab_font">请输入问题的答案</font>
-			</div>
-		</nav>
-		<!--下拉刷新容器-->
-		<div id="refreshContainer" class="mui-content mui-scroll-wrapper">
-			<div class="mui-scroll">
-				<!--数据列表-->
-				<ul class="mui-table-view">
-					<li id="question" class="mui-table-view-cell mui-media">
-						<div class="mui-media-body">
-							<h4 id="question_title"></h4>
-							<div id="question_images" class="mui-row"></div>
-							<div id="question_content"></div>
-						</div>
-						<div class="mui-media-body">
-							<span id="liulanshu" class="mui-icon iconfont icon-liulan"></span>
-							<span id="guanzhushu" class="mui-icon iconfont icon-31guanzhu1xuanzhong"></span>
-							<button id="guanzhu" type="button" class="mui-btn mui-btn-blue mui-pull-right">关注</button>
-						</div>
-					</li>
-					<div id="answer" style="background-color:#efeff4;">
-						<div id="answer_top" style="height: 45px;color: #9D9D9D;">
-							<div id="answershu" class="mui-pull-left" style="line-height: 45px;margin-left: 15px;"></div>
-							<a href="#popover" class="mui-pull-right" style="color: #9D9D9D;line-height: 45px;margin-right: 15px;">
-								<div id="ordertype" class="mui-pull-left">按质量排序</div>
-								<span class="mui-icon mui-icon-arrowdown" style="font-size: 16px;margin-left: 3px;"></span>
-							</a>
-							<div id="popover" class="mui-popover" style="width: 150px;z-index: 999;">
-								<!--<div class="mui-popover-arrow"></div>-->
-								<ul class="mui-table-view" style="color: black;">
-									<li id="ordertype_2" class="mui-table-view-cell" value='2' data-value="按质量排序" style="height: 40px;">
-										按质量排序
-										<span id="ordertype_2_icon" class="mui-icon mui-icon-checkmarkempty mui-pull-right"></span>
-									</li>
-									<li id="ordertype_1" class="mui-table-view-cell" value='1' data-value="按时间排序" style="height: 40px;">
-										按时间排序
-										<span id="ordertype_1_icon" class="mui-icon mui-icon-checkmarkempty mui-pull-right" style="display: none;"></span>
-									</li>
-								</ul>
-							</div>
-						</div>
-						<div id="answer_bottom">
-						</div>
-					</div>
-				</ul>
-			</div>
-		</div>
-		<script src="../../js/mui.min.js"></script>
-		<script src="../../js/utils/events.js"></script>
-		<script src="../../js/publicProtocol.js"></script>
-		<script src="../../js/publicQiuzhiProtocol.js"></script>
-		<script src="../../js/qiuzhi/qiuzhi-questionSub.js"></script>
-	</body>
+            #answer_bottom .mui-table-view-cell .mui-ellipsis {
+                /*回答者姓名*/
+                line-height: 42px;
+                font-size: 16px;
+                font-weight: bold;
+                color: gray;
+            }
 
+            #answer_bottom .mui-table-view-cell .answer-info {
+                /*回答的赞，评论数，时间信息*/
+                margin-top: 5px;
+                color: #b7b7b7;
+            }
+
+        #ordertype {
+            color: #808080;
+        }
+        #popover li{
+            color:#808080;
+        }
+        .ellipsis-3 {
+            /*回答内容*/
+            display: -webkit-box;
+            overflow: hidden;
+            white-space: normal !important;
+            text-overflow: ellipsis;
+            word-wrap: break-word;
+            -webkit-line-clamp: 3;
+            -webkit-box-orient: vertical;
+            margin-top: 10px;
+            color:#323232;
+        }
+    </style>
+</head>
+<body>
+    <nav class="mui-bar mui-bar-tab" style="background: white;box-shadow: 0px -1px 0px 0px rgba(228,228,228,0.35);padding-top: 6px;">
+        <span class="mui-icon iconfont icon-xie mui-pull-left" style="color: gray;line-height: 34px;padding: 0px;margin-left: 10px;margin-right: 10px;"></span>
+        <div id="tab_div" style="line-height: 34px;border: 1px solid #D9D9D9;margin-left: 50px;margin-right: 10px;padding-left: 25px;color: gray;border-radius: 3px;">
+            <font id="tab_font" style="color: #b7b7b7;">请输入问题的答案</font>
+        </div>
+    </nav>
+    <!--下拉刷新容器-->
+    <div id="refreshContainer" class="mui-content mui-scroll-wrapper">
+        <div class="mui-scroll">
+            <!--数据列表-->
+            <ul class="mui-table-view">
+                <li id="question" class="mui-table-view-cell mui-media">
+                    <div class="mui-media-body">
+                        <h4 id="question_title"></h4>
+                        <div id="question_images" class="mui-row"></div>
+                        <div id="question_content"></div>
+                    </div>
+                    <div class="mui-media-body">
+                        <span id="liulanshu" class="mui-icon iconfont icon-liulan"></span>
+                        <span id="guanzhushu" class="mui-icon iconfont icon-31guanzhu1xuanzhong"></span>
+                        <button id="guanzhu" type="button" class="mui-btn mui-btn-blue mui-pull-right">关注</button>
+                    </div>
+                </li>
+                <div id="answer" style="background-color:#efeff4;">
+                    <div id="answer_top" style="height: 45px;color: #9D9D9D;">
+                        <div id="answershu" class="mui-pull-left" style="line-height: 45px;margin-left: 15px;"></div>
+                        <a href="#popover" class="mui-pull-right" style="color: #9D9D9D;line-height: 45px;margin-right: 15px;">
+                            <div id="ordertype" class="mui-pull-left">按质量排序</div>
+                            <span class="mui-icon mui-icon-arrowdown" style="font-size: 16px;margin-left: 3px;"></span>
+                        </a>
+                        <div id="popover" class="mui-popover" style="width: 150px;z-index: 999;">
+                            <!--<div class="mui-popover-arrow"></div>-->
+                            <ul class="mui-table-view" style="color: black;">
+                                <li id="ordertype_2" class="mui-table-view-cell" value='2' data-value="按质量排序" style="height: 40px;">
+                                    按质量排序
+                                    <span id="ordertype_2_icon" class="mui-icon mui-icon-checkmarkempty mui-pull-right"></span>
+                                </li>
+                                <li id="ordertype_1" class="mui-table-view-cell" value='1' data-value="按时间排序" style="height: 40px;">
+                                    按时间排序
+                                    <span id="ordertype_1_icon" class="mui-icon mui-icon-checkmarkempty mui-pull-right" style="display: none;"></span>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div id="answer_bottom">
+                    </div>
+                </div>
+            </ul>
+        </div>
+    </div>
+    <script src="../../js/mui.min.js"></script>
+    <script src="../../js/utils/events.js"></script>
+    <script src="../../js/publicProtocol.js"></script>
+    <script src="../../js/publicQiuzhiProtocol.js"></script>
+    <script src="../../js/qiuzhi/qiuzhi-questionSub.js"></script>
+</body>
 </html>
